// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entry Schema createEntry: should work 1`] = `
Object {
  "data": Object {
    "createEntry": Object {
      "Guest": Object {
        "email": "jane@example.com",
        "firstName": "Jane",
        "lastName": "Doe",
      },
      "id": "asdf",
      "see": "xyz",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema endEntry: should work 1`] = `
Object {
  "data": Object {
    "endEntry": Object {
      "createdAt": "1992-02-16T08:00:35",
      "endedAt": "2020-02-01T00:00:00",
      "id": "5d62ccc4-b4fa-4613-a7e8-a67270c9941e",
      "see": "Krystel Schumm",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema getByGuestId: should work 1`] = `
Object {
  "data": Object {
    "byGuestId": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema getEntry: should work 1`] = `
Object {
  "data": Object {
    "getEntry": Object {
      "createdAt": "1992-02-16T08:00:35",
      "endedAt": "1977-12-13T01:23:20",
      "id": "5d62ccc4-b4fa-4613-a7e8-a67270c9941e",
      "see": "Krystel Schumm",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema listEntry should be protected 1`] = `
Object {
  "data": Object {
    "listEntry": null,
  },
  "errors": Array [
    [GraphQLError: You are not authenticated],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema listEntry: should work 1`] = `
Object {
  "data": Object {
    "listEntry": Array [
      Object {
        "Guest": Object {
          "NIK": "4532711991301150",
          "firstName": "Maurine",
          "lastName": "Rau",
        },
        "createdAt": "1992-02-16T08:00:35",
        "endedAt": "1977-12-13T01:23:20",
        "see": "Krystel Schumm",
      },
      Object {
        "Guest": Object {
          "NIK": "4532711991301150",
          "firstName": "Maurine",
          "lastName": "Rau",
        },
        "createdAt": "2012-09-24T02:37:58",
        "endedAt": "2008-12-26T23:41:48",
        "see": "Gabriel Koelpin",
      },
      Object {
        "Guest": Object {
          "NIK": "4532711991301150",
          "firstName": "Maurine",
          "lastName": "Rau",
        },
        "createdAt": "2004-10-23T18:48:06",
        "endedAt": "1993-09-11T17:56:57",
        "see": "Lacy Ziemann",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema listEntryToday: should work 1`] = `
Object {
  "data": Object {
    "listTodayEntry": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
